# sie-study-app

./: README.md
sie-study-app/: app.py  pyproject.toml  sie_study.db
sie-study-app/core/: claude_client.py  generate.py  topics.py
sie-study-app/db/: questions.py  schema.py
sie-study-app/pages/: 1_practice.py  2_quiz.py  3_progress.py  4_generate.py
